<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black">

                <ImageView
                    android:id="@+id/iv_home_top"
                    android:layout_width="0dp"
                    android:layout_height="140dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/andriod_media_1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_home_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="32dp"
                    android:src="@drawable/andriod_top_navigation_ic_left_arrow_circle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <ImageView
                    android:id="@+id/iv_home_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/andriod_top_navigation_ic_viewmore"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_home_arrow"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/iv_home_arrow" />

                <ImageView
                    android:id="@+id/iv_home_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:src="@drawable/andriod_top_navigation_ic_search"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_home_more"
                    app:layout_constraintEnd_toStartOf="@+id/iv_home_more"
                    app:layout_constraintTop_toTopOf="@+id/iv_home_more" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="13dp"
                    android:layout_marginTop="114dp"
                    android:src="@drawable/property_1_android_read_profile_main"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/rectangle_border_gray_radius_18"
                    android:paddingStart="10dp"
                    android:paddingTop="6dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="6dp"
                    android:text="@string/home_modify_profile"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_home_top" />

                <TextView
                    android:id="@+id/tv_home_main_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/home_profile_name"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />

                <TextView
                    android:id="@+id/tv_home_main_nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/home_profile_nickname"
                    android:textColor="@color/twitter_gray50"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@+id/tv_home_main_name"
                    app:layout_constraintTop_toBottomOf="@+id/tv_home_main_name" />

                <TextView
                    android:id="@+id/tv_home_main_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/home_profile_introduction"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@+id/tv_home_main_nickname"
                    app:layout_constraintTop_toBottomOf="@+id/tv_home_main_name" />

                <TextView
                    android:id="@+id/tv_home_main_following_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="38dp"
                    android:fontFamily="@font/helvetica_bold"
                    android:text="@string/home_profile_following_num"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@+id/tv_home_main_description"
                    app:layout_constraintTop_toBottomOf="@+id/tv_home_main_nickname" />

                <TextView
                    android:id="@+id/tv_home_main_following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/home_profile_following"
                    android:textColor="@color/twitter_gray50"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_home_main_following_num"
                    app:layout_constraintStart_toEndOf="@+id/tv_home_main_following_num"
                    app:layout_constraintTop_toTopOf="@+id/tv_home_main_following_num" />

                <TextView
                    android:id="@+id/tv_home_main_follow_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="38dp"
                    android:fontFamily="@font/helvetica_bold"
                    android:text="@string/home_profile_follow_num"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@+id/tv_home_main_following"
                    app:layout_constraintTop_toBottomOf="@+id/tv_home_main_nickname" />

                <TextView
                    android:id="@+id/tv_home_main_follow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/home_profile_follow"
                    android:textColor="@color/twitter_gray50"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_home_main_follow_num"
                    app:layout_constraintStart_toEndOf="@+id/tv_home_main_follow_num"
                    app:layout_constraintTop_toTopOf="@+id/tv_home_main_follow_num" />

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tab_home"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="53dp"
                    android:background="@color/black"
                    app:layout_constraintTop_toBottomOf="@+id/tv_home_main_description"
                    app:tabMode="scrollable"
                    app:tabTextColor="@color/white" />


                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/vp_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tab_home" />

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/fragment_container"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/vp_home" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </ScrollView>

        <ImageView
            android:id="@+id/iv_home_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/android_btn"
            android:layout_marginBottom="17dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
